[workspace]
resolver = "2"
members = [
    "agent",
    "alumet",
    "alumet-ffi",
    "plugin-aggregation",
    "plugin-cgroup",
    "plugin-cgroupv1",
    "plugin-cgroupv2",
    "plugin-csv",
    "plugin-elasticsearch",
    "plugin-energy-attribution",
    "plugin-energy-estimation-tdp",
    "plugin-grace-hopper",
    "plugin-influxdb",
    "plugin-kwollect-output",
    "plugin-mongodb",
    "plugin-nvidia-nvml",
    "plugin-nvidia-jetson",
    "plugin-perf",
    "plugin-procfs",
    "plugin-prometheus-exporter",
    "plugin-rapl",
    "plugin-relay",
    "plugin-socket-control",
    "plugin-mongodb",
    "test-dynamic-plugins",
    "util-cgroups",
]

# To apply the following lint settings to a workspace member,
# set "lints.workspace" to true in the member's Cargo.toml.
[workspace.lints.clippy]
redundant_field_names = "deny"
needless_return = "deny"
needless_borrow = "deny"
comparison_to_empty = "deny"
single_char_pattern = "deny"
unused_enumerate_index = "deny"
useless_format = "deny"
