[workspace]
resolver = "2"
members = [
    "agent",
    "core/*",
    "plugins/aggregation",
    "plugins/cgroups/*",
    "plugins/csv",
    "plugins/elasticsearch",
    "plugins/energy-attribution",
    "plugins/energy-estimation-tdp",
    "plugins/grace-hopper",
    "plugins/influxdb",
    "plugins/kwollect-output",
    "plugins/mongodb",
    "plugins/nvidia-nvml",
    "plugins/nvidia-jetson",
    "plugins/perf",
    "plugins/process-to-cgroup-bridge",
    "plugins/procfs",
    "plugins/prometheus-exporter",
    "plugins/rapl",
    "plugins/relay",
    "plugins/socket-control",
    "plugins/mongodb",
    "separate-tests/test-dynamic-plugins",
]

[workspace.dependencies]
alumet = { path = "core/alumet" }
anyhow = "1.0.99"
log = "0.4.27"
rustc-hash = "2.1.1"
serde = "1.0.219"
toml = "0.9.5"
thiserror = "2.0.14"

# To apply the following lint settings to a workspace member,
# set "lints.workspace" to true in the member's Cargo.toml.
[workspace.lints.clippy]
redundant_field_names = "deny"
needless_return = "deny"
needless_borrow = "deny"
comparison_to_empty = "deny"
single_char_pattern = "deny"
unused_enumerate_index = "deny"
useless_format = "deny"
