[workspace]
resolver = "3"
members = [
    "agent",
    "core/*",
    "plugins/aggregation",
    "plugins/cgroups/*",
    "plugins/csv",
    "plugins/elasticsearch",
    "plugins/energy-attribution",
    "plugins/energy-estimation-tdp",
    "plugins/grace-hopper",
    "plugins/influxdb",
    "plugins/kwollect-input",
    "plugins/kwollect-output",
    "plugins/mongodb",
    "plugins/nvidia-jetson",
    "plugins/nvidia-nvml",
    "plugins/perf",
    "plugins/process-to-cgroup-bridge",
    "plugins/procfs",
    "plugins/prometheus-exporter",
    "plugins/quarch", 
    "plugins/rapl",
    "plugins/relay",
    "plugins/socket-control",
    "separate-tests/test-dynamic-plugins",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/alumet-dev/alumet"

[workspace.dependencies]
alumet = { path = "core/alumet" }
anyhow = "1.0.99"
env_logger = "0.11.8"
humantime-serde = "1.1.1"
log = "0.4.27"
pretty_assertions = "1.4.1"
rustc-hash = "2.1.1"
serde = "1.0.219"
tempfile = "3.20.0"
thiserror = "2.0.14"
tokio = "1.47.1"
toml = "0.9.5"

# To apply the following lint settings to a workspace member,
# set "lints.workspace" to true in the member's Cargo.toml.
[workspace.lints.clippy]
comparison_to_empty = "deny"
needless_borrow = "deny"
needless_return = "deny"
redundant_field_names = "deny"
single_char_pattern = "deny"
unused_enumerate_index = "deny"
useless_format = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
