[package]
name = "alumet_ffi"
version = "0.2.0"
edition = "2021"
description = "bindings for writing plugins in foreign languages"
links = "alumet_h"

[features]
default = ["dynamic"]

# enables dynamic plugins
dynamic = ["dep:libloading"]

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.95"
libc = "0.2.169"
libloading = { version = "0.8.5", optional = true }
log = "0.4.25"
toml = { version = "0.8.20", default-features = false }

[lints]
workspace = true

[build-dependencies]
cbindgen = "0.28.0"
