[package]
name = "alumet"
version = "0.8.1"
edition = "2021"
rust-version = "1.78"

description = "Modular framework for hardware and software measurement (including energy consumption and more)."
license = " EUPL-1.2"
homepage = "https://alumet.dev"
repository = "https://github.com/alumet-dev/alumet"
keywords = ["rapl", "energy", "monitoring", "profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# enables test module
test = []

[dependencies]
toml = { version = "0.8.19", features = ["preserve_order"] }
libc = "0.2.158"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["time", "rt", "rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
anyhow = "1.0.88"
fxhash = "0.2.1"
serde = "1.0.210"
smallvec = { version = "1.13.2", features = ["union"] }
tokio-util = "0.7.12"
indoc = "2.0.5"
thiserror = "1.0.63"
fancy-regex = "0.13.0"
futures = "0.3.30"
ordered-float = "4.6.0"
num_enum = "0.7.3"

# Dependencies for Linux builds only.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-timerfd = "0.2.0"

# Dev dependencies for tests.
[dev-dependencies]
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["derive"] }
serial_test = "3.2.0"

[lints]
workspace = true
