[package]
name = "app-agent"
version = "0.6.0"
edition = "2021"
description = "Metric collector agent to install on each node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
humantime-serde = "1.1.1"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt"] }
toml = "0.8.19"

# plugins
plugin-csv = { path = "../plugin-csv", optional = true }
plugin-perf = { path = "../plugin-perf", optional = true }
plugin-rapl = { path = "../plugin-rapl", optional = true }
plugin-socket-control = { path = "../plugin-socket-control", optional = true }
plugin-relay = { path = "../plugin-relay", optional = true }
plugin-procfs = { path = "../plugin-procfs", optional = true }

[features]
# local non-relay mode for x86 processors
local_x86 = [
    "dep:plugin-rapl",
    "dep:plugin-perf",
    "dep:plugin-procfs",
    "dep:plugin-csv",
    "dep:plugin-socket-control",
]

# relay mode
relay_client = [
    "dep:plugin-relay",
    "plugin-relay/client",
    "dep:plugin-rapl",
    "dep:plugin-perf",
    "dep:plugin-socket-control",
]
relay_server = ["dep:plugin-relay", "plugin-relay/server", "dep:plugin-csv"]

[[bin]]
name = "alumet-local-agent"
path = "src/bin/local.rs"
required-features = ["local_x86"]

[[bin]]
name = "alumet-relay-client"
path = "src/bin/relay_client.rs"
required-features = ["relay_client"]

[[bin]]
name = "alumet-relay-server"
path = "src/bin/relay_server.rs"
required-features = ["relay_server"]

[lints]
workspace = true
