[package]
name = "alumet-agent"
version = "0.7.0"
edition = "2021"
description = "Metric collector agent to install on each node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive", "env", "string"] }
env_logger = "0.11.5"
humantime-serde = "1.1.1"
log = { version = "0.4", features = ["release_max_level_debug"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt"] }
toml = "0.8.19"

# plugins
plugin-csv = { path = "../plugin-csv", optional = true }
plugin-perf = { path = "../plugin-perf", optional = true }
plugin-rapl = { path = "../plugin-rapl", optional = true }
plugin-nvidia = { path = "../plugin-nvidia", optional = true }
plugin-socket-control = { path = "../plugin-socket-control", optional = true }
plugin-relay = { path = "../plugin-relay", optional = true }
plugin-procfs = { path = "../plugin-procfs", optional = true }
plugin-oar2 = { path = "../plugin-oar2", optional = true }
plugin-cgroupv2 = { path = "../plugin-cgroupv2", optional = true }
plugin-influxdb = { path = "../plugin-influxdb", optional = true }
plugin-mongodb = { path = "../plugin-mongodb", optional = true }
thiserror = "2.0.11"

[features]
rapl = ["dep:plugin-rapl"]
socket-control = ["dep:plugin-socket-control"]
k8s = ["dep:plugin-cgroupv2"]
oar3 = ["dep:plugin-cgroupv2"]
oar2 = ["dep:plugin-oar2"]
nvidia-nvml = ["dep:plugin-nvidia", "plugin-nvidia/nvml"]
nvidia-jetson = ["dep:plugin-nvidia", "plugin-nvidia/jetson"]

# outputs
output-csv = ["dep:plugin-csv"]
output-influxdb = ["dep:plugin-influxdb"]
output-mongodb = ["dep:plugin-mongodb"]

# relay mode
relay-client = ["dep:plugin-relay", "plugin-relay/client"]
relay-server = ["dep:plugin-relay", "plugin-relay/server"]

# groups of features
linux-inputs = ["dep:plugin-perf", "dep:plugin-procfs"]

[[bin]]
name = "alumet-agent"
path = "src/bin/main.rs"

[[bin]]
name = "alumet-local-agent"
path = "src/bin/local.rs"
required-features = ["local_x86"]

[[bin]]
name = "alumet-relay-client"
path = "src/bin/relay_client.rs"
required-features = ["relay_client"]

[[bin]]
name = "alumet-relay-server"
path = "src/bin/relay_server.rs"
required-features = ["relay_server"]

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"
libc = "0.2.159"
tempfile = "3.15"

[build-dependencies]
vergen = { version = "9.0.4", default-features = false, features = ["build", "cargo", "rustc"] }
vergen-gitcl = "1.0.5"
