[package]
name = "app-relay-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
alumet = { version = "0.2.0", path = "../alumet" }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
humantime-serde = "1.1.1"
log = "0.4.21"
plugin-csv = { version = "0.1.0", path = "../plugin-csv" }
plugin-rapl = { version = "0.2.0", path = "../plugin-rapl" }
plugin-relay = { version = "0.1.0", path = "../plugin-relay", features = [] }
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"

[features]
client = ["plugin-relay/client"]
server = ["plugin-relay/server"]

[[bin]]
name = "relay-client"
required-features = ["client"]
path = "src/main_client.rs"

[[bin]]
name = "relay-server"
required-features = ["server"]
path = "src/main_server.rs"
