[package]
name = "locomen-app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.1"
libc = "0.2.150"
libloading = "0.8.1"
locomen-core = { path = "../locomen-core" }
log = "0.4.20"
serde = "1.0.190"
tokio = { version = "1.34.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tokio-timerfd = "0.2.0"
toml = "0.8.6"
