[package]
name = "plugin-aggregation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.82"
humantime-serde = "1.1.1"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["net", "io-util"] }
tokio-util = "0.7.10"
serde = { version = "1.0.198", features = ["derive"] }
futures = "0.3.31"
