[package]
name = "plugin-cgroup"
version = "0.1.0"
edition = "2024"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.98"
humantime-serde = "1.1.1"
log = "0.4.27"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt"] }
util-cgroups = { path = "../util-cgroups", features = ["manually"]}

[dev-dependencies]
alumet = {path = "../alumet", features = ["test"]}
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
toml = "0.8.19"
util-cgroups = { path = "../util-cgroups", features = ["manually"]}

[lints]
workspace = true
