[package]
name = "plugin-cgroupv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
gethostname = "0.5.0"
log = "0.4.22"
tokio = "1.40.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
humantime-serde = "1.1.1"
notify = "6.1.1"
base64 = "0.22.1"

# Use RusTLS instead of OpenSSL on musl
[target.'cfg(target_env = "musl")'.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["http2", "json", "rustls-tls"] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["http2", "json", "native-tls"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.5"
mockito = "0.31"
