[package]
name = "plugin-cgroupv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.79"
gethostname = "0.5.0"
log = "0.4.20"
reqwest = { version = "0.12", features = ["json"] }
tokio = "1.37.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0"
humantime-serde = "1.1.1"
notify = "6.1.1"

[lints]
workspace = true
