[package]
name = "plugin-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.82"
log = "0.4.21"
time = { version = "0.3.36", features = ["formatting"] }
