[package]
name = "plugin-csv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints]
workspace = true
