[package]
name = "plugin-elasticsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
alumet = { path = "../alumet" }
time = { version = "0.3.41", features = ["formatting"] }
anyhow = "1.0.98"
base64 = "0.22.1"
log = "0.4.27"

[lints]
workspace = true

[dev-dependencies]
toml = "0.8.20"
