[package]
name = "plugin-energy-attribution"
version = "0.1.0"
edition = "2021"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.79"
# keep evalexpr 11.x because it is MIT, evalexpr >= 12 is AGPL
evalexpr = "11.3"
log = "*"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0"
