[package]
name = "plugin-influxdb"
version = "0.1.0"
edition = "2021"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
log = "0.4.22"

# We disable HTTP2 because it's not supported by InfluxDB.
reqwest = { version = "0.12.7", default-features = false, features = ["default-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt"] }

[lints]
workspace = true
