[package]
name = "plugin-k8s"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { version = "0.2.0", path = "../alumet" }
anyhow = "1.0.79"
log = "0.4.20"
reqwest = { version = "0.12", features = ["json"] }
tokio = "1.37.0"
serde = "1.0.197"
serde_json = "1.0.115"
regex = "1.10.4"