[package]
name = "plugin-kwollect-input"
version = "0.1.0"
edition = "2024"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.98"
chrono = "0.4.41"
error-chain = "0.12.4"
hostname = "0.4.1"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.20.0"
time = { version ="0.3.41", features = ["formatting"]}
tokio = "1.46.0"

[lints]
workspace = true
