[package]
name = "plugin-nvidia-jetson"
version = "0.4.0"
edition = "2021"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.97"
humantime-serde = "1.1.1"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.19.1"
