[package]
name = "plugin-nvidia-nvml"
version = "0.4.0"
edition = "2021"

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
humantime-serde = "1.1.1"
log = "0.4.22"
nvml-wrapper = { version = "0.10.0", features = ["legacy-functions"] }
nvml-wrapper-sys = { version = "0.8.0" }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.10"

[lints]
workspace = true
