[package]
name = "plugin-opentelemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alumet = { path = "../alumet" }
anyhow = "1.0.88"
serde = { version = "1.0.210", features = ["derive"] }
opentelemetry = { version = "*" }
opentelemetry_sdk = { version = "*" }
opentelemetry-otlp = { version = "*", features = ["grpc-tonic"]}

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints]
workspace = true
